--- a/index.html
+++ b/index.html
@@ -12,11 +12,128 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 
     <title>Frontend Mentor | Social proof section</title>
 
   </head>
   <body>
+    <main>
+      <div class="flex-container">
+        <div class="site-overview">
+          <div class="header">
+
+            <h1>10,000+ of our</h1>
+            <h1>users love our</h1>
+            <h1>products.</h1>
+
+          </div>
+          <div class="sub-header">
+
+            <p>We only provide great products combined with excellent customer service.
+              See what our satisfied customers are saying about our services.</p>
+
+          </div>
+        </div>
+
+        <div class="ratings">
+          <div class="customer-stars">
+            <div class="star-container">  
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+            </div>
+
+            <p>Rated 5 Stars in Reviews</p>
+
+          </div>
+          <div class="report-guru">
+            <div class="star-container">  
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+            </div>
+            <p>Rated 5 Stars in Report Guru</p>
+          </div>
+          <div class="bestTech">
+            <div class="star-container">  
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+              <img src="images\icon-star.svg" alt="5-star-icon">
+            </div>
+            <p>Rated 5 Stars in BestTech</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="customer-reviews">
+        <div class="first">
+          <div class="customer-info">
+
+            <div class="img-container">
+              <img src="images\image-colton.jpg" alt="image-colton" class="rounded-img profile-pic">
+            </div>
+            <div class="customer-info-container">
+              <p class="custome-name">Colton Smith</p>
+              <p class="customer-type">Verified Buyer</p>
+            </div>
+
+          </div>
+          <div class="review-text">
+
+            <p>"We needed the same printed design as the one we had ordered a week prior.
+              Not only did they find the original order, but we also received it in time.
+              Excellent!"</p>
+
+          </div>
+        </div>
+        <div class="second">
+          <div class="customer-info">
+
+            <div class="img-container">
+              <img src="images\image-irene.jpg" alt="image-irene" class="rounded-img profile-pic">
+            </div>
+            <div class="customer-info-container">
+              <p class="custome-name">Irene Roberts </p>
+              <p class="customer-type">Verified Buyer</p>
+            </div>
+
+          </div>
+          <div class="review-text">
+            <p>"Customer service is always excellent and very quick turn around. Completely
+              delighted with the simplicity of the purchase and the speed of delivery."</p>
+          </div>
+        </div>
+        <div class="third">
+          <div class="customer-info">
+            <div class="img-container">
+              <img src="images\image-anne.jpg" alt="image-irene" class="rounded-img profile-pic">
+            </div>
+            <div class="customer-info-container">
+              <p class="custome-name">Anne Wallace </p>
+              <p class="customer-type">Verified Buyer</p>
+            </div>
+          </div>
+          <div class="review-text">
+            <p>"Put an order with this company and can only praise them for the very high
+              standard. Will definitely use them again and recommend them to everyone!"</p>
+          </div>
+        </div>
+      </div>
+
+
+    </main>
+
+
+    
    
   </body>
 </html>
